Se agrega conexiòn git

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="cuadro" id="datPerson">
           <h3>Datos Personales</h3>
-          <p data-aos="fade-right" data-aos-offset="600">
+          <p data-aos="fade-right" >
             <strong>Fecha de nacimiento: </strong> 03/06/1994.
           </p>
           <p data-aos="fade-left" data-aos-offset="800">
@@ -101,7 +101,7 @@
         </div>
         <div class="cuadro" id="titulos">
           <h3>Formación academica</h3>
-          <p data-aos="fade-right" data-aos-offset="600">
+          <p data-aos="fade-right" >
             <strong>Ingenieria en Sistema </strong> <br />
             <sub> Universi | 2016 - actualidad</sub>
           </p>
@@ -112,7 +112,7 @@
         </div>
         <div class="cuadro" id="trabajos">
           <h3>Resumen de Empleo</h3>
-          <p data-aos="fade-right" data-aos-offset="600">
+          <p data-aos="fade-right" >
             <strong>Mc Daniel </strong> <br />
             <sub> Cajero | 2016 - actualidad</sub> <br />
             Responsabilidades: Cobro, balance, Inventario.
@@ -129,7 +129,9 @@
         <div id="derecho">
           <p>Andres Ruiz © 2023. Reservados todos los derechos</p>
         </div>
-        <div id="acceso"><i class="fa-brands fa-github"></i></div>
+        <div id="acceso">
+          <a href="https://github.com/rodrigoruiz2511"><i class="fa-brands fa-github"></i></a>
+          </div>
       </footer>
     </div>
 
